# Hidrosafe

./: .env  .replit  README.md  admin.py  app.py  app.py.bak  auth.py  hydrosafe-b8635-firebase-adminsdk-fbsvc-cb825c411f.json  main.py  models.py  package-lock.json  package.json  pyproject.toml  routes.py
instance/: hydrosafe.db
static/css/: custom.css
static/js/: dashboard.js  firebaseConfig.js  login.js
templates/: admin_alerts.html  admin_maintenances.html  admin_manage_users.html  admin_panel.html  admin_permissions.html  admin_reports.html  admin_requests.html  base.html  contact.html  dashboard.html  documentation.html  home.html  notifications.html  profile.html  user_requests.html
templates/auth/: forgot_password.html  login.html  register.html
