[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Tu Nombre <tu.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
email-validator = ">=2.2.0"
flask-wtf = ">=1.2.2"
flask = ">=3.1.0"
flask-login = ">=0.6.3"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
sqlalchemy = ">=2.0.38"
werkzeug = ">=3.1.3"
jinja2 = ">=3.1.5"

[tool.poetry.dev-dependencies]
# Aquí puedes agregar dependencias de desarrollo si las tienes
